LPS-77699 Update Translations

--- a/modules/apps/archived/oauth-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/archived/oauth-web/src/main/resources/content/Language_it.properties
@@ -30,8 +30,8 @@ service-access-policy-entry-default-title-OAUTH_READ=Accesso in Lettura OAuth
 service-access-policy-entry-default-title-OAUTH_WRITE=Accesso in Scrittura OAuth
 share-access-token=Condividi Token di Accesso
 the-application-listed-below-is-requesting-access-to-your-account=L'applicazione mostrata qui sotto sta richiedendo l'accesso al tuo account.
-the-temporary-oauth-token-expired.-please-go-back-to-your-client-application-and-repeat-the-oauth-authorization=Token OAuth temporaneo scaduto. Tornare all'applicazione client e ripetere l'autorizzazione OAuth. (Automatic Translation)
-user-authorization-uri=URI autorizzazione utente (Automatic Translation)
-website-url=URL sito Web (Automatic Translation)
+the-temporary-oauth-token-expired.-please-go-back-to-your-client-application-and-repeat-the-oauth-authorization=L' OAuth token temporaneo è scaduto. Per favore torna indietro alla tua applicazione client e ripeti l'autorizzazione OAuth.
+user-authorization-uri=URI Autorizzazione Utente
+website-url=URL del sito web
 write=scrivere (Automatic Translation)
-write-data-on-your-behalf=Scrivi dati per tuo conto. (Automatic Translation)
+write-data-on-your-behalf=Scrivi i dati a modo tuo.
