--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -4290,12 +4290,12 @@ current-and-previous=Aktuální a předchozí
 current-asset-library=Aktuální knihovna datových zdrojů (Automatic Translation)
 current-assignee=Aktuální postupník (Automatic Translation)
 current-date=Aktuální datum (Automatic Translation)
-current-day-of-month=Current Day of Month (Automatic Copy)
-current-day-of-week=Current Day of Week (Automatic Copy)
-current-day-of-year=Current Day of Year (Automatic Copy)
+current-day-of-month=Aktuální den v měsíci
+current-day-of-week=Aktuální den v týdnu
+current-day-of-year=Aktuální den v roce
 current-entry=Aktuální položka (Automatic Translation)
 current-folder=Současná složka
-current-hour=Current Hour (Automatic Copy)
+current-hour=Aktuální hodina
 current-image=Aktuální obrázek
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-node=Současná složka
@@ -4320,7 +4320,7 @@ current-url-help=Představuje URL, ze které byl požadavek na portál zaslán.
 current-user=Tento uživatel
 current-value=Current Value (Automatic Copy)
 current-version=Současná verze
-current-year=Current Year (Automatic Copy)
+current-year=Aktuální rok
 custom=Vlastní
 custom-abstract=Vlastní abstrakt (Automatic Translation)
 custom-attribute=Vlastní atribut (Automatic Translation)
@@ -6112,7 +6112,7 @@ export-the-selected-data-to-the-site-of-a-remote-portal-or-to-another-site-in-th
 export-the-selected-data-to-the-x-of-a-remote-portal-or-to-another-x-in-the-same-portal=Export the selected data to the {0} of a remote portal or to another {0} in the same portal. (Automatic Copy)
 export-translation=Export Translation (Automatic Copy)
 export-users=Exportovat uživatele
-export-xls=Export XLS (Automatic Copy)
+export-xls=Export XLS
 exported=Export
 exporting=Probíhá export
 expose-global=Vystavit globální (Automatic Translation)
@@ -7508,14 +7508,14 @@ is-a-url=Je adresa URL (Automatic Translation)
 is-an-email=Je e-mail (Automatic Translation)
 is-empty=Je prázdný (Automatic Translation)
 is-equal-to=Rovná se (Automatic Translation)
-is-female=Is Female (Automatic Copy)
+is-female=Je žena
 is-gender-x=Is Gender X (Automatic Copy)
 is-greater-than=Je větší než (Automatic Translation)
 is-greater-than-or-equal-to=Je větší nebo roven (Automatic Translation)
 is-less-than=Je menší než (Automatic Translation)
 is-less-than-or-equal-to=Je menší nebo rovno (Automatic Translation)
 is-login-page=Je přihlašovací stránka (Automatic Translation)
-is-male=Is Male (Automatic Copy)
+is-male=Je muž
 is-not-empty=Není prázdný (Automatic Translation)
 is-not-equal-to=Není roven (Automatic Translation)
 is-not-ready={0} není připraven.
@@ -11186,7 +11186,7 @@ please-enter-a-valid-end-date-that-is-in-the-past=Zadejte, prosím, platné datu
 please-enter-a-valid-entry-url=Zadejte prosím platné URL.
 please-enter-a-valid-estimated-end-date=Zadejte prosím platné odhadované datum ukončení.
 please-enter-a-valid-expiration-date=Zadejte prosím platné datum ukončení platnosti.
-please-enter-a-valid-expiration-date-only-future-dates-are-accepted=Please enter a valid expiration date. Only future dates are accepted. (Automatic Copy)
+please-enter-a-valid-expiration-date-only-future-dates-are-accepted=Zadejte prosím platné datum ukončení. Pouze budoucí datum je správně.
 please-enter-a-valid-fax-number=Zadejte prosím platné faxové číslo.
 please-enter-a-valid-file=Vyberte prosím platný soubor.
 please-enter-a-valid-firm-name=Zadejte prosím platný název firmy.
