--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -17087,7 +17087,7 @@ votes=Votos
 voting-is-disabled-because-this-poll-expired-on-x=Ya no es posible votar, esta encuesta expiró el {0}.
 vspace=Vspace
 wab-extender-configuration-name=Extensor WAB
-wait=Espera
+wait=Esperar
 wait-timeout=Tiempo de espera de definición de módulo (segundos)
 waiting-for-an-answer=Esperando una respuesta
 waiting-on-sibling-tokens-to-complete=Esperando a que terminen otros símbolos en el mismo nivel
