--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -2437,7 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=En cliquant sur ce bouton, vous pouvez créer un site public et/ou privé pour votre organisation.
 by-date-range=Par plage de dates :
 by-email-address=Par adresse e-mail
-by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By prefiltering the collection, you narrow down the results that appear on the page. (Automatic Copy)
+by-prefiltering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=En préfiltrant la collection, vous affinez les résultats qui apparaissent sur la page.
 by-screen-name=Par login
 by-time-frame=Par période :
 by-user-id=Par ID utilisateur
@@ -3148,7 +3148,7 @@ collection-item=Élément de collection
 collection-items=Éléments de collection
 collection-mapping-help=Vous pouvez utiliser le mappage pour afficher des champs spécifiques des éléments de la collection. Les champs disponibles dépendent du type et du sous-type communs à tous les éléments de la collection.
 collection-page=Page de collection
-collection-prefiltered=Collection Prefiltered (Automatic Copy)
+collection-prefiltered=Collection préfiltrée
 collection-provider=Fournisseur de collections
 collection-providers=Fournisseurs de collections
 collection-title=Intitulé de la collection
@@ -4622,7 +4622,7 @@ default-segment-name=N'importe qui
 default-settings-for-all-instances=Paramètres par défaut pour toutes les instances
 default-shipping=Livraison par défaut
 default-site-roles-assignment-help=Sélectionner les rôles que les nouveaux membres du site auront par défaut.
-default-sort=Default Sort (Automatic Copy)
+default-sort=Tri par défaut
 default-specification-group=Groupe de spécifications par défaut
 default-style-book=Livre de styles par défaut
 default-tab=Étiquette de défaut
@@ -5316,7 +5316,7 @@ edit-controls=Mode édition
 edit-conversion-draft=Modifier le brouillon de conversion
 edit-coupon=Modifier le bon de réduction
 edit-current-assignee=Modifier l'affecté actuel
-edit-default-sort=Edit Default Sort (Automatic Copy)
+edit-default-sort=Modifier le tri par défaut
 edit-default-values=Modifier les valeurs par défaut
 edit-description=Modifier la description
 edit-discount-rule=Éditer la règle de promotion
@@ -7076,7 +7076,7 @@ html-element-name=Nom de l'élément HTML
 html-element-name-help=Indiquez un nom d'élément personnalisé valide (utilisez uniquement des lettres minuscules et au moins un trait d'union).
 html-format=Format de HTML
 html-mode=Mode de HTML
-html-tag=HTML Tag (Automatic Copy)
+html-tag=Balise HTML
 html-title=Titre HTML
 html-title-help=Ce texte sera appliqué à la balise méta de titre dans la section en-tête de la page. La taille recommandée est inférieure à 60 caractères.
 http-client-factory-configuration-name=Configuration d'usine du client HTTP
@@ -9255,7 +9255,7 @@ missing-instance-error=Veuillez sélectionner au moins une instance avant d'exé
 missing-manifest.xml=manifest.xml introuvable dans le LAR
 missing-redirect-uri=L'application n'a pas fourni le paramètre "redirect_uri" obligatoire. Veuillez signaler ce problème au fournisseur de l'application.
 missing-requirement-conflict=Conflit d'exigences manquantes
-misusing-this-setup-might-impact-seo=Misusing this setup might impact SEO. (Automatic Copy)
+misusing-this-setup-might-impact-seo=Une mauvaise utilisation de cette configuration peut avoir un impact sur le référencement SEO.
 mm-dd-yyyy=(mm/jj/aaaa)
 mmm-d=MMM d
 mmm-d-yyyy-hh-mm=d MMM yyyy, HH:mm
@@ -9745,7 +9745,7 @@ new-custom-field=Nouveau champ fait sur commande
 new-custom-object=Nouvel objet personnalisé
 new-data-export=Nouvelle exportation de données
 new-data-source=Nouvelle source de données
-new-default-sort=New Default Sort (Automatic Copy)
+new-default-sort=Nouveau tri par défaut
 new-definition=Nouvelle Définition
 new-device-family=Nouvelle famille de périphérique
 new-digital-signature-envelope=Nouvelle enveloppe de signature numérique
@@ -9935,7 +9935,7 @@ no-data-migration-processes-are-available=Aucun procédé de transfert de donné
 no-data-providers-were-found=Aucun fournisseur de données n'a été trouvée.
 no-declined-invites=Aucune invitation déclinée.
 no-default-display-page-template=Pas de modèle de page d'affichage par défaut
-no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
+no-default-sort-was-created-yet=Aucun tri par défaut n'a encore été créé.
 no-definitions-were-found=Aucune définition n'a été trouvée.
 no-delivery-terms=Aucune condition de livraison
 no-description=Pas de description
@@ -11662,7 +11662,7 @@ predefined=Prédéfini(e)(s)
 predefined-value=Valeur prédéfinie
 predefined-variables=Variables prédéfinies
 preferences=Préférences
-prefilter-collection=Prefilter Collection (Automatic Copy)
+prefilter-collection=Prefiltrer la collection
 prefix=Préfixe
 prefix-and-suffix-symbols=Symboles de préfixe et de suffixe
 prefix-or-suffix=Préfixe ou suffixe
@@ -14062,7 +14062,7 @@ sort-display-context-help=Accédez aux données contenues dans l'objet SortDispl
 sort-portlet-instance-configuration-name=Trier
 sort-structures-by-name=Trier les structures par nom
 sort-structures-by-name-help=Réglez ce paramètre sur vrai pour afficher les structures triées par nom croissant quand du contenu web est ajouté. Sinon, les structures seront triées par identificateur. Activer cette propriété peut réduire les performances en fonction du nombre de ddmStructures existantes depuis le lancement du tri dans la mémoire.
-sorting=Sorting (Automatic Copy)
+sorting=Tri
 sound-settings=Paramètres sonores
 source=Source
 source-address=Adresse De la Source
@@ -14204,7 +14204,7 @@ star-off=Supprimer la notation
 stars=étoiles
 start=Début
 start-a-new-workflow=Commencer un nouveau workflow
-start-creating-a-sort-to-display-specific-data=Start creating a sort to display specific data. (Automatic Copy)
+start-creating-a-sort-to-display-specific-data=Commencez à créer un tri pour afficher des données spécifiques.
 start-date=Date de début
 start-free-trial=Commencer l'essai gratuit
 start-from=Commencer à partir de
@@ -15465,7 +15465,7 @@ there-are-no-collection-providers=Il n'y a aucun fournisseur de collections.
 there-are-no-collection-usages=Il n'y a aucune utilisation de collection.
 there-are-no-collections=Il n'y a pas de collection.
 there-are-no-collections-yet=Il n'y a pas encore de collection.
-there-are-no-columns-added-in-this-view-yet=There are no columns added in this view yet. (Automatic Copy)
+there-are-no-columns-added-in-this-view-yet=Il n'y a pas encore de colonnes ajoutées dans cette vue.
 there-are-no-comments-yet=Il n'y a pas encore de commentaire.
 there-are-no-compatible-object-fields-to-map=Il n'y a aucun champ d'objet compatible à cartographier.
 there-are-no-completed-instances=Il n'y a aucune demande réalisée de publication.
@@ -17850,7 +17850,7 @@ you-cannot-modify-this-document-because-it-was-checked-out-by-x-on-x=Vous ne pou
 you-cannot-modify-this-document-because-it-was-locked-by-x-on-x=Vous ne pouvez pas modifier ce document car il a été vérouillé par {0} le {1}.
 you-cannot-modify-this-folder-because-it-was-locked=Vous ne pouvez pas modifier ce dossier car il est verrouillé.
 you-cannot-move-this-page-because-the-resulting-order-would-place-a-page-of-type-x-as-the-first-page=Vous ne pouvez déplacer cette page car l'ordre en découlant placerait une page de type {0} comme première page.
-you-cannot-perform-this-operation-on-checked-out-documents-.please-check-it-in-or-cancel-the-checkout-first=Vous ne pouvez effectuer cette opération sans documents vérifiés. Veuillez procéder à la vérification ou annuler le checkout.
+you-cannot-perform-this-operation-on-checked-out-documents-.please-check-it-in-or-cancel-the-checkout-first=Vous ne pouvez pas effectuer cette opération sans documents vérifiés. Veuillez procéder à la vérification ou annuler la mise à jour.
 you-cannot-preview-the-style-book-because-your-site-is-empty=Vous ne pouvez pas prévisualiser le livre de styles car votre site est vide.
 you-cannot-remove-a-language-that-is-the-current-default-language=Vous ne pouvez supprimer cette langue parce qu'elle est celle par défaut.
 you-cannot-remove-default-attributes=Vous ne pouvez supprimer les attributs par défaut.
