--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -724,7 +724,7 @@ add-data-definition=Adăugare definiție de date (Automatic Translation)
 add-data-source=Adăugare sursă de date (Automatic Translation)
 add-default-structures=Adăugare structuri implicite (Automatic Translation)
 add-definition=Adăugare definiție raport (Automatic Translation)
-add-delivery-terms=Add Delivery Terms (Automatic Copy)
+add-delivery-terms=Adăugare condiții de livrare
 add-device-family=Adăugare familie de dispozitive (Automatic Translation)
 add-discount=Adăugare reducere (Automatic Translation)
 add-discount-product=Adăugare produs cu reducere (Automatic Translation)
@@ -748,7 +748,7 @@ add-existing-account=Adăugare cont existent (Automatic Translation)
 add-existing-account-group=Adăugare grup de conturi existent (Automatic Translation)
 add-existing-category=Adăugare categorie existentă (Automatic Translation)
 add-existing-channel=Adăugare canal existent (Automatic Translation)
-add-existing-delivery-term=Add Existing Delivery Term (Automatic Copy)
+add-existing-delivery-term=Adăugare condiții de livrare existente
 add-existing-option=Adăugare opțiune existentă (Automatic Translation)
 add-existing-order-type=Add Existing Order Type (Automatic Copy)
 add-existing-payment-term=Add Existing Payment Term (Automatic Copy)
@@ -1567,10 +1567,10 @@ are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authoriz
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
 are-you-sure-you-want-to-delete-the-default-display-page-template=Sigur ștergeți șablonul implicit de pagină de afișare? Toate paginile de afișare asociate vor fi șterse. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-entities-of-this-application=Sigur ștergeți entitățile acestei aplicații? (Automatic Translation)
-are-you-sure-you-want-to-delete-the-page-x.-it-will-be-removed-immediately=Are you sure you want to delete the page "{0}"? It will be removed immediately. (Automatic Copy)
-are-you-sure-you-want-to-delete-the-page-x.-this-page-contains-child-pages-that-will-also-be-removed=Are you sure you want to delete the page "{0}"? This page contains child pages that will also be removed. (Automatic Copy)
-are-you-sure-you-want-to-delete-the-page-x.-this-page-serves-as-a-scope-for-content=Are you sure you want to delete the page "{0}"? This page serves as a scope for content. Any content that is scoped to this page will also be removed. (Automatic Copy)
-are-you-sure-you-want-to-delete-the-page-x.-this-page-serves-as-a-scope-for-content-and-also-contains-child-pages=Are you sure you want to delete the page "{0}"? This page serves as a scope for content and also contains child pages. Any content scoped to this page and child pages will also be removed. (Automatic Copy)
+are-you-sure-you-want-to-delete-the-page-x.-it-will-be-removed-immediately=Ești sigur că vrei să ștergi pagina "{0}"? Va fi eliminată imediat.
+are-you-sure-you-want-to-delete-the-page-x.-this-page-contains-child-pages-that-will-also-be-removed=Ești sigur că vrei să ștergi pagina "{0}"? Această pagină conține pagini secundare care vor fi, de asemenea, eliminate.
+are-you-sure-you-want-to-delete-the-page-x.-this-page-serves-as-a-scope-for-content=Ești sigur că vrei să ștergi pagina "{0}"? Această pagină servește ca și cadru pentru conținut. Orice conținut care este inclus în această pagină va fi, de asemenea, eliminat.
+are-you-sure-you-want-to-delete-the-page-x.-this-page-serves-as-a-scope-for-content-and-also-contains-child-pages=Ești sigur că vrei să ștergi pagina "{0}"? Această pagină servește ca și cadru pentru conținut și conține, de asemenea, pagini secundare. Orice conținut care este inclus în această pagină și paginile secundare aferente vor fi, de asemenea, eliminate.
 are-you-sure-you-want-to-delete-the-scheduled-event=Ești sigur că vrei să ștergi evenimentul programat?
 are-you-sure-you-want-to-delete-the-selected-account-groups=Sigur ștergeți grupurile de conturi selectate? (Automatic Translation)
 are-you-sure-you-want-to-delete-the-selected-accounts=Sigur ștergeți conturile selectate? (Automatic Translation)
@@ -2450,7 +2450,7 @@ bytes=Biți
 c-product-version-configuration-name=Versiune produs (Automatic Translation)
 cab=Cabină (Automatic Translation)
 cache-actions=Acțiuni cache (Automatic Translation)
-cache-control=Cache Control (Automatic Copy)
+cache-control=Control cache
 cache-control-configuration-name=Cache Control (Automatic Copy)
 cache-control-description=Set cache control policy for documents with view permissions for guests. (Automatic Copy)
 cache-data-on-the-first-request=Cache data on the first request.
@@ -4778,8 +4778,8 @@ delivery-subject=Subiectul livrării (Automatic Translation)
 delivery-subscription=Abonament de livrare (Automatic Translation)
 delivery-subscription-length=Durata abonamentului (Automatic Translation)
 delivery-subscription-type=Tipul abonamentului (Automatic Translation)
-delivery-term-eligibility=Delivery Term Eligibility (Automatic Copy)
-delivery-term-selected=Delivery Term Selected (Automatic Copy)
+delivery-term-eligibility=Eligibilitate condiție de livrare
+delivery-term-selected=Condiție de livrare selectată
 delivery-terms=Delivery Terms (Automatic Copy)
 delta-price=Preț Delta (Automatic Translation)
 denied=Respins
@@ -6386,7 +6386,7 @@ final-price=Preț final (Automatic Translation)
 find=Gpseşte
 find-a-category=Găsirea unei categorii (Automatic Translation)
 find-a-channel=Găsirea unui canal (Automatic Translation)
-find-a-delivery-term=Find a Delivery Term (Automatic Copy)
+find-a-delivery-term=Găsire o condiție de livrare
 find-a-page=Găsirea unei Pagini (Automatic Translation)
 find-a-payment-term=Find a Payment Term (Automatic Copy)
 find-a-product=Găsirea unui produs (Automatic Translation)
@@ -8760,7 +8760,7 @@ match-x-of-the-following-fields=Potriveste {0} din urmatoarele Campuri:
 matches=chibrituri (Automatic Translation)
 max=Max (Automatic Translation)
 max-add-menu-items=Adăugare maximă elemente meniu (Automatic Translation)
-max-age=Max Age (Automatic Copy)
+max-age=Vechime max
 max-age-description=Set the number of seconds after a response is generated in which a response will be considered fresh. (Automatic Copy)
 max-attendees=Maxim Participanti
 max-buffer-size=Dimensiune maximă tampon (Automatic Translation)
@@ -9935,7 +9935,7 @@ no-declined-invites=Fără invitații refuzate. (Automatic Translation)
 no-default-display-page-template=Fără șablon implicit de pagină de afișare (Automatic Translation)
 no-default-sort-was-created-yet=No default sort was created yet. (Automatic Copy)
 no-definitions-were-found=Nu a fost gasita nici o definitie.
-no-delivery-terms=No Delivery Terms (Automatic Copy)
+no-delivery-terms=Nu există condiții de livrare
 no-description=No Description (Automatic Copy)
 no-device-families-are-configured=Nu sunt configurate familii de dispozitive. (Automatic Translation)
 no-device-rules-are-configured=Nu sunt configurate reguli de dispozitiv. (Automatic Translation)
@@ -10132,7 +10132,7 @@ not-approved=Neaprobat
 not-assigned=Neasignat
 not-attending=Nu participa
 not-available=Nu sunt disponibile
-not-cacheable-mime-types=Not Cacheable Mime Types (Automatic Copy)
+not-cacheable-mime-types=Tipuri Mime care nu sunt cacheabile
 not-cacheable-mime-types-description=Set a list of mime types that will not be cached. (Automatic Copy)
 not-contains=Nu conține (Automatic Translation)
 not-customizable=Nu este personalizabil (Automatic Translation)
@@ -14106,7 +14106,7 @@ specific-account-groups=Grupuri de conturi specifice (Automatic Translation)
 specific-accounts=Conturi specifice (Automatic Translation)
 specific-channels=Canale specifice (Automatic Translation)
 specific-content=Conținut specific (Automatic Translation)
-specific-delivery-terms=Specific Delivery Terms (Automatic Copy)
+specific-delivery-terms=Condiții de livrare specifice
 specific-display-page-template=Șablon de pagină de afișare specific (Automatic Translation)
 specific-facet-configuration=Fațetă specifică (Automatic Translation)
 specific-order-types=Specific Order Types (Automatic Copy)
@@ -14292,9 +14292,9 @@ style-book-thumbnail=Miniatură carte de stil (Automatic Translation)
 style-errors-detected=Style Errors Detected (Automatic Copy)
 style-guide-sample=Eșantion ghid de stil (Automatic Translation)
 styles=Stiluri (Automatic Translation)
-styles-by-default=Styles by Default (Automatic Copy)
-styles-from-master=Styles from Master (Automatic Copy)
-styles-from-theme=Styles from Theme (Automatic Copy)
+styles-by-default=Stiluri implicite
+styles-from-master=Stiluri din principal
+styles-from-theme=Stiluri din temă
 stylesheet=Foaie de Stil
 subcategories=Subcategorii
 subcategories[message-board]=Subcategorii
@@ -15390,7 +15390,7 @@ the-x-x-could-not-be-imported-because-of-the-following-error-x=The {0} {1} could
 the-x-x-has-missing-references-that-could-not-be-found-during-the-process=The {0}: {1} has missing reference(s) that could not be found during the process. (Automatic Copy)
 the-x-x-missing-reference-could-not-be-found-during-the-process=The {0}: {1} missing reference could not be found during the process. (Automatic Copy)
 the-x-x-was-restored-to-x=The {0} {1} was restored to {2}. (Automatic Copy)
-the-xliff-file-contains-a-translation-for-an-invalid-model=The XLIFF file contains a translation for an invalid model. (Automatic Copy)
+the-xliff-file-contains-a-translation-for-an-invalid-model=Fișierul XLIFF conține o traducere pentru un model nevalid.
 the-xliff-file-does-not-have-all-needed-fields=Fișierul XLIFF nu are toate câmpurile necesare. (Automatic Translation)
 the-xliff-file-has-an-unavailable-language-translation=Fișierul XLIFF are o traducere lingvistică indisponibilă. (Automatic Translation)
 the-xliff-file-has-invalid-parameters=Fișierul XLIFF are parametri nevalidi. (Automatic Translation)
