--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -16934,7 +16934,7 @@ view-attributes=查看特性
 view-blog=查看博客
 view-blogs=查看博客
 view-bookmarks=查看书签
-view-builder=View Builder (Automatic Copy)
+view-builder=视图生成器
 view-calendar-booking-details=查看活动详情
 view-calendars=查看日历
 view-child-sites=查看下级站点
