COMMERCE-8683 Build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Πληκτρολογήστε ένα έγκυρο
 the-google-client-secret-is-invalid=Πληκτρολογήστε ένα έγκυρο μυστικό πελάτη Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Για τα απενεργοποιημένα πεδία, η ρύθμιση παραμέτρων της γραμμής αναζήτησης κεφαλίδας σελίδας έχει προτεραιότητα. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Το αναγνωριστικό βασίζεται στο πεδίο ονόματος. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Ο ρόλος της υπηρεσίας παροχής ταυτότητας έχει απενεργοποιηθεί. Μπορεί να ενεργοποιηθεί ξανά στις Ρυθμίσεις συστήματος. (Automatic Translation)
