--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=لطفا یک شناسه کاربری معتبر
 the-google-client-secret-is-invalid=Please enter a valid Google client secret.a-folder-with-the-same-name-already-exists=پوشه‌آی با این نام هم اکنون وجود دارد.
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=برای فیلدهای غیر فعال، پیکربندی نوار جستجوی سرصفحه صفحه اولویت دارد. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=این شناسه بر اساس فیلد نام است.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=نقش ارائه دهنده هویت از کار افتاده است. می توان آن را در تنظیمات سیستم دوباره فعال کرد. (Automatic Translation)
