--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -14978,6 +14978,7 @@ the-google-client-id-is-invalid=Syötä kelvollinen Google-asiakastunnus.
 the-google-client-secret-is-invalid=Syötä kelvollinen Googlen asiakkaan salasana.
 the-google-places-api-key-is-not-set=Google Placesin API-avainta ei ole määritetty.
 the-header-search-bar-configuration-takes-precedence=Käytöstä poistetuille kentille sivun ylätunnisteen Hakupalkin määritys on etusijalla.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Tunnus perustuu nimikenttään.
 the-id-you-entered-is-reserved-x=Antamasi ID on varattu: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identiteetin tarjoajan rooli on poistettu käytöstä. Se voidaan ottaa uudelleen käyttöön Järjestelmän asetuksista.
