--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Masukkan ID klien Google yang valid. (Automatic 
 the-google-client-secret-is-invalid=Masukkan rahasia klien Google yang valid. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Untuk bidang yang dinonaktifkan, konfigurasi Bilah Pencarian header halaman lebih diutamakan. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID didasarkan pada bidang nama. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Peran penyedia identitas telah dinonaktifkan. Ini dapat diaktifkan kembali di Pengaturan Sistem. (Automatic Translation)
