--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -14981,6 +14981,7 @@ the-google-client-id-is-invalid=Inserisci un Google Client Id valido.
 the-google-client-secret-is-invalid=Inserisci una password per Google Client valida.
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Per i campi disabilitati, la configurazione della barra di ricerca dell'intestazione di pagina ha la precedenza. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=L'ID è basato sul campo del nome.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Il ruolo del provider di identità è stato disabilitato. Può essere riati abilitato in Impostazioni di sistema. (Automatic Translation)
