--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=אנא הזן זיהוי לקוח Google תקף.
 the-google-client-secret-is-invalid=אנא הזן סוד לקוח Google תקף.
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=עבור שדות לא זמינים, תצורת סרגל החיפוש של כותרת העמוד מקבלת קדימות. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=המזהה מבוסס על השדה שם.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=תפקיד ספק הזהויות הפך ללא זמין. ניתן להפוך אותו לזמין מחדש ב'הגדרות מערכת'. (Automatic Translation)
