--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Sila masukkan ID pelanggan Google yang sah. (Aut
 the-google-client-secret-is-invalid=Sila masukkan rahsia pelanggan Google yang sah. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Untuk medan kurang upaya, konfigurasi Bar Carian pengepala halaman mengambil keutamaan. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID adalah berdasarkan medan nama. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Peranan pembekal identiti telah dinyahdayakan. Ia boleh didayakan semula dalam Seting Sistem. (Automatic Translation)
