--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -14983,6 +14983,7 @@ the-google-client-id-is-invalid=Voer een geldige Google client ID in.
 the-google-client-secret-is-invalid=Voer een geldige Google client secret in.
 the-google-places-api-key-is-not-set=De API-sleutel voor Google Places is niet ingesteld.
 the-header-search-bar-configuration-takes-precedence=Voor uitgeschakelde velden heeft de zoekbalkconfiguratie van de paginakoptekst voorrang.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Het Id is afgeleid van het naam veld.
 the-id-you-entered-is-reserved-x=De ingevoerde ID is voorbehouden: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=De ID-providerrol werd uitgeschakeld. Schakel de rol opnieuw in via de systeeminstellingen.
