--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Ange ett giltigt klient-ID för Google.
 the-google-client-secret-is-invalid=Ange en giltig klienthemlighet för Google.
 the-google-places-api-key-is-not-set=API-nyckel för Google Places har inte angetts.
 the-header-search-bar-configuration-takes-precedence=För inaktiverade fält används Konfiguration av sökfält i sidhuvudet.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID är baserat på fältets namn.
 the-id-you-entered-is-reserved-x=ID:t du angav är reserverat: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Roll för identitetsleverantör har inaktiverats. Den kan aktiveras igen i systeminställningarna.
