--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Моля, въведете валиден иде
 the-google-client-secret-is-invalid=Моля, въведете валидна тайна на клиента на Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=За забранени полета конфигурацията на лентата за търсене на горен колонтитул на страницата има предимство. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ИД е базиран на полето за име. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Ролята на доставчик на самоличност е забранена. Тя може да бъде отново активирана в системните настройки. (Automatic Translation)
