--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Angiv et gyldigt Google-klient-id. (Automatic Tr
 the-google-client-secret-is-invalid=Angiv en gyldig Google-klienthemmelighed. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=I forbindelse med deaktiverede felter har konfigurationen af sidehovedets søgefelt forrang. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Id'et er baseret på navnefeltet. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identitetsproviderrollen er deaktiveret. Den kan aktiveres igen i Systemindstillinger. (Automatic Translation)
