--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -14982,6 +14982,7 @@ the-google-client-id-is-invalid=Bitte geben Sie eine gültige Google Client-ID a
 the-google-client-secret-is-invalid=Bitte geben Sie ein gültiges Google Client-Secret an.
 the-google-places-api-key-is-not-set=Der Google Places API-Schlüssel wurde nicht festgelegt.
 the-header-search-bar-configuration-takes-precedence=Bei deaktivierten Feldern hat die Konfiguration der Suchleiste in der Kopfzeile Vorrang.
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Die ID basiert auf dem Namensfeld.
 the-id-you-entered-is-reserved-x=Die von Ihnen eingegebene ID ist reserviert: {0}.
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Die Rolle Identity-Provider wurde deaktiviert. Sie kann in den Systemeinstellungen erneut aktiviert werden.
