--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Sisestage kehtiv Google'i kliendi ID. (Automatic
 the-google-client-secret-is-invalid=Sisestage kehtiv Google'i kliendi saladus. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Keelatud väljade puhul on ülimuslik lehepäise otsinguriba konfiguratsioon. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID põhineb nimeväljal. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identiteedipakkuja roll on keelatud. Seda saab süsteemisätetes uuesti lubada. (Automatic Translation)
