--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -14979,6 +14979,7 @@ the-google-client-id-is-invalid=유효한 Google 클라이언트 ID를 입력하
 the-google-client-secret-is-invalid=유효한 Google 클라이언트 비밀을 입력하십시오. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=비활성화된 필드의 경우 페이지 헤더 검색 바 구성이 우선합니다. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID는 이름 필드를 기반으로 합니다. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=ID 공급자 역할이 비활성화되었습니다. 시스템 설정에서 다시 사용할 수 있습니다. (Automatic Translation)
