--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Įveskite galiojantį "Google" kliento ID. (Auto
 the-google-client-secret-is-invalid=Įveskite galiojančią "Google" kliento paslaptį. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Išjungtų laukų pirmenybė teikiama puslapio antraštės ieškos juostos konfigūracijai. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID pagrįstas pavadinimo lauku. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Tapatybės teikėjo vaidmuo išjungtas. Jis gali būti iš naujo įjungtas sistemos parametruose. (Automatic Translation)
