--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Angi en gyldig Google-klient-ID. (Automatic Tran
 the-google-client-secret-is-invalid=Skriv inn en gyldig Google-klienthemmelighet. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=For deaktiverte felt har konfigurasjonen av søkefeltet for sideoverskriften forrang. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID er basert på navnefeltet.
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Identitetsleverandørrollen er deaktivert. Den kan aktiveres på nytt i Systeminnstillinger. (Automatic Translation)
