--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Wprowadź prawidłowy identyfikator klienta Goog
 the-google-client-secret-is-invalid=Wprowadź prawidłowy klucz tajny klienta Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=W przypadku wyłączonych pól pierwszeństwo ma konfiguracja paska wyszukiwania nagłówka strony. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Identyfikator jest oparty na polu nazwy. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Rola dostawcy tożsamości została wyłączona. Można go ponownie włączyć w ustawieniach systemu. (Automatic Translation)
