--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Introduceți un ID de client Google valid. (Auto
 the-google-client-secret-is-invalid=Introduceți un secret de client Google valid. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Pentru câmpurile dezactivate, configurația barei de căutare a antetului paginii are prioritate. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID-ul se bazează pe câmpul nume. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Rolul furnizorului de identitate a fost dezactivat. Poate fi reactivat în Setări sistem. (Automatic Translation)
