--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Zadajte platný identifikátor klienta Google. (
 the-google-client-secret-is-invalid=Zadajte platné tajomstvo klienta Google. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=V prípade zakázaných polí má prednosť konfigurácia panela vyhľadávania hlavičky stránky. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=Identifikácia je založená na poli názvu. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Rola poskytovateľa identity bola vypnutá. Je možné ho znova zapnúť v systémových nastaveniach. (Automatic Translation)
