--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=Vnesite veljaven ID Googlovega odjemalca. (Autom
 the-google-client-secret-is-invalid=Vnesite veljavno skrivnost Googlovega odjemalca. (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=Za onemogočana polja ima prednost konfiguracija vrstice za iskanje glave strani. (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID temelji na polju imena. (Automatic Translation)
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=Vloga ponudnika identitete je bila onemogotena. V sistemskih nastavitvah ga je mogoče ponovno omogočiti. (Automatic Translation)
