--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -14980,6 +14980,7 @@ the-google-client-id-is-invalid=โปรดป้อนรหัสไคลเ
 the-google-client-secret-is-invalid=โปรดป้อนความลับของไคลเอ็นต์ Google ที่ถูกต้อง (Automatic Translation)
 the-google-places-api-key-is-not-set=The Google Places API key is not set. (Automatic Copy)
 the-header-search-bar-configuration-takes-precedence=สําหรับฟิลด์ที่ปิดใช้งาน (Automatic Translation)
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=ID ขึ้นอยู่กับฟิลด์ชื่อ
 the-id-you-entered-is-reserved-x=The ID you entered is reserved: {0}. (Automatic Copy)
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=บทบาทตัวให้บริการข้อมูลเฉพาะตัวถูกปิดใช้งาน สามารถเปิดใช้งานอีกครั้งในการตั้งค่าระบบ (Automatic Translation)
