--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -14982,6 +14982,7 @@ the-google-client-id-is-invalid=请输入有效的谷歌客户端账号。
 the-google-client-secret-is-invalid=请输入有效谷歌客户端密钥。
 the-google-places-api-key-is-not-set=未设置 Google Places API 密钥。
 the-header-search-bar-configuration-takes-precedence=对于禁用的字段，页面标题搜索栏配置优先。
+the-hierarchy-of-the-default-sorting-will-be-defined-by-the-vertical-order-of-the-fields=The hierarchy of the default sorting will be defined by the vertical order of the fields. (Automatic Copy)
 the-id-is-based-on-the-name-field=该ID基于名称字段。
 the-id-you-entered-is-reserved-x=您输入的 ID 预留备用：{0}。
 the-identity-provider-role-has-been-disabled-it-can-be-re-enabled-in-system-settings=该身份提供程序角色已被禁用。可以在"系统设置"中重新启用。
